/*
 * Copyright (C) 2023 PixieBrix, Inc.
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

/* eslint-disable @shopify/jest/no-snapshots -- We want to specifically commit the entire customized manifest as a snapshot */
/* eslint-disable no-restricted-imports -- Aliases don't work outside built files */

import { omit } from "lodash";
import manifest from "../src/manifest.json";
import { loadEnv } from "./env.js";
import customizeManifest from "./manifest.mjs";

loadEnv();

const cleanCustomize = (...args) =>
  omit(customizeManifest(...args), ["version", "version_name", "key"]);

describe("customizeManifest", () => {
  test("mv2", () => {
    expect(
      cleanCustomize(manifest, {
        env: process.env,
      }),
    ).toMatchSnapshot();
  });
  test("mv3", () => {
    expect(
      cleanCustomize(manifest, {
        env: process.env,
        manifestVersion: 3,
      }),
    ).toMatchSnapshot();
  });
});
