// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customizeManifest mv2 1`] = `
{
  "author": "PixieBrix, Inc.",
  "background": {
    "scripts": [
      "grayIconWhileLoading.js",
      "background.js",
    ],
  },
  "browser_action": {
    "default_icon": {
      "128": "icons/inactive/logo128.png",
      "16": "icons/inactive/logo16.png",
      "32": "icons/inactive/logo32.png",
      "48": "icons/inactive/logo48.png",
    },
    "default_title": "PixieBrix",
  },
  "browser_specific_settings": {
    "gecko": {
      "id": "extension@pixiebrix.com",
      "strict_min_version": "91.0",
    },
  },
  "commands": {
    "toggle-quick-bar": {
      "description": "Toggle Quick Bar",
      "suggested_key": {
        "default": "Ctrl+M",
        "mac": "Command+M",
      },
    },
  },
  "content_scripts": [
    {
      "all_frames": true,
      "css": [
        "contentScript.css",
      ],
      "exclude_matches": [
        "https://*.googleapis.com/*",
      ],
      "js": [
        "contentScript.js",
      ],
      "match_about_blank": true,
      "matches": [
        "https://*/*",
        "http://*/*",
      ],
      "run_at": "document_idle",
    },
    {
      "exclude_matches": [
        "https://*.googleapis.com/*",
      ],
      "js": [
        "loadActivationEnhancements.js",
      ],
      "matches": [
        "https://*/*",
      ],
      "run_at": "document_end",
    },
  ],
  "content_security_policy": "script-src 'self' 'unsafe-eval' http://localhost:8097; font-src 'self' https://fonts.gstatic.com; connect-src 'self' http: https: ws://localhost:8097/; object-src 'self'; img-src 'self' data: https: https://pixiebrix-marketplace-dev.s3.amazonaws.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; frame-src 'self' https:;",
  "description": "Customize, extend, and integrate your favorite SaaS apps without writing a line of code!",
  "devtools_page": "devtools.html",
  "externally_connectable": {
    "matches": [
      "https://*.pixiebrix.com/*",
    ],
  },
  "homepage_url": "https://www.pixiebrix.com",
  "icons": {
    "128": "icons/logo128.png",
    "16": "icons/logo16.png",
    "32": "icons/logo32.png",
    "48": "icons/logo48.png",
  },
  "manifest_version": 2,
  "minimum_chrome_version": "95.0",
  "name": "PixieBrix - Development",
  "optional_permissions": [
    "clipboardWrite",
  ],
  "options_ui": {
    "open_in_tab": true,
    "page": "options.html",
  },
  "permissions": [
    "activeTab",
    "storage",
    "identity",
    "tabs",
    "webNavigation",
    "contextMenus",
    "*://*/*",
    "<all_urls>",
  ],
  "sandbox": {
    "pages": [
      "sandbox.html",
    ],
  },
  "short_name": "PixieBrix",
  "storage": {
    "managed_schema": "managedStorageSchema.json",
  },
  "web_accessible_resources": [
    "css/*",
    "bundles/*",
    "sandbox.html",
    "frame.html",
    "frame.css",
    "sidebar.html",
    "sidebar.css",
    "pageEditor.css",
    "pageScript.js",
    "ephemeralForm.html",
    "walkthroughModal.html",
    "ephemeralPanel.html",
    "ephemeralModal.css",
    "audio/*",
    "user-icons/*",
    "img/*",
  ],
}
`;

exports[`customizeManifest mv3 1`] = `
{
  "action": {
    "default_icon": {
      "128": "icons/inactive/logo128.png",
      "16": "icons/inactive/logo16.png",
      "32": "icons/inactive/logo32.png",
      "48": "icons/inactive/logo48.png",
    },
    "default_title": "PixieBrix",
  },
  "author": "PixieBrix, Inc.",
  "background": {
    "service_worker": "background.worker.js",
  },
  "browser_specific_settings": {
    "gecko": {
      "id": "extension@pixiebrix.com",
      "strict_min_version": "91.0",
    },
  },
  "commands": {
    "toggle-quick-bar": {
      "description": "Toggle Quick Bar",
      "suggested_key": {
        "default": "Ctrl+M",
        "mac": "Command+M",
      },
    },
  },
  "content_scripts": [
    {
      "all_frames": true,
      "css": [
        "contentScript.css",
      ],
      "exclude_matches": [
        "https://*.googleapis.com/*",
      ],
      "js": [
        "contentScript.js",
      ],
      "match_about_blank": true,
      "matches": [
        "https://*/*",
        "http://*/*",
      ],
      "run_at": "document_idle",
    },
    {
      "exclude_matches": [
        "https://*.googleapis.com/*",
      ],
      "js": [
        "loadActivationEnhancements.js",
      ],
      "matches": [
        "https://*/*",
      ],
      "run_at": "document_end",
    },
  ],
  "content_security_policy": {
    "extension_pages": "script-src 'self' http://localhost:8097; font-src 'self' https://fonts.gstatic.com; connect-src 'self' http: https: ws://localhost:8097/; object-src 'self'; img-src 'self' data: https: https://pixiebrix-marketplace-dev.s3.amazonaws.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; frame-src 'self' https:;",
    "sandbox": "sandbox allow-scripts allow-forms allow-popups allow-modals; script-src 'self' 'unsafe-inline' 'unsafe-eval'; child-src 'self';",
  },
  "description": "Customize, extend, and integrate your favorite SaaS apps without writing a line of code!",
  "devtools_page": "devtools.html",
  "externally_connectable": {
    "matches": [
      "https://*.pixiebrix.com/*",
    ],
  },
  "homepage_url": "https://www.pixiebrix.com",
  "host_permissions": [
    "<all_urls>",
  ],
  "icons": {
    "128": "icons/logo128.png",
    "16": "icons/logo16.png",
    "32": "icons/logo32.png",
    "48": "icons/logo48.png",
  },
  "manifest_version": 3,
  "minimum_chrome_version": "95.0",
  "name": "PixieBrix - Development",
  "optional_permissions": [
    "clipboardWrite",
  ],
  "options_ui": {
    "open_in_tab": true,
    "page": "options.html",
  },
  "permissions": [
    "activeTab",
    "storage",
    "identity",
    "tabs",
    "webNavigation",
    "contextMenus",
    "devtools",
    "scripting",
  ],
  "sandbox": {
    "pages": [
      "sandbox.html",
    ],
  },
  "short_name": "PixieBrix",
  "storage": {
    "managed_schema": "managedStorageSchema.json",
  },
  "web_accessible_resources": [
    {
      "matches": [
        "*://*/*",
      ],
      "resources": [
        "css/*",
        "bundles/*",
        "sandbox.html",
        "frame.html",
        "frame.css",
        "sidebar.html",
        "sidebar.css",
        "pageEditor.css",
        "pageScript.js",
        "ephemeralForm.html",
        "walkthroughModal.html",
        "ephemeralPanel.html",
        "ephemeralModal.css",
        "audio/*",
        "user-icons/*",
        "img/*",
      ],
    },
  ],
}
`;
